<resources>


    <string-array name="x_type">

        <item>WeightLifting</item>
        <item>PowerLifting</item>
        <item>Bodyweight</item>
        <item>HIIT</item>
        <item>Cardio</item>

    </string-array>


    <string name="app_name">F I T</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="landing_title">Greatness Awaits</string>
    <string name="fit_logo">fit_logo</string>
    <string name="login_skipbutton">Skip</string>
    <string name="fit_logo_login">logo</string>
    <string name="button">Button</string>
    <string name="my_image">hello int</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="Btn_Addfood">Add Food</string>
    <string name="Btn_addIngredient">Add Ingredient</string>
    <string name="Btn_AddExercise">Add Exercise</string>
    <string name="Loginpage_text">Dont have an account ? </string>
    <string name="single_ex_title">TextView</string>
    <string name="single_ex_desc">TextView</string>
    <string name="big_cals_num">TextView</string>
    <string name="prot_num">TextView</string>
    <string name="fat_cals">TextView</string>
    <string name="Carbohydrates_num">TextView</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="add_exercise_string">Add Exercise</string>
    <string name="youtube_id">Youtube Vid ID</string>
    <string name="add">Add</string>
    <string name="ingredients_single">Ingredients</string>
    <string name="Ingredients_single_list">TextView</string>
    <string name="method_single_big">Method</string>
    <string name="actual_method">Method</string>
    <string name="food_name_create">Food name</string>
    <string name="ingredients_create_list">Ingredients</string>
    <string name="method_add_new">Method</string>
    <string name="add_food_btn">Add Food</string>
    <string name="new_ingredient_name">Ingredient Name</string>
    <string name="new_ingredient_protein">Protein</string>
    <string name="new_ingredient_carbohydrates">Carbohydrates</string>
    <string name="new_ingredient_Fat">Fat</string>
    <string name="calories_new_num">Calories:</string>
    <string name="row_text_item">TextView</string>
    <string name="EXERCISE_Choice">TextView</string>
    <string name="help_out">Home</string>
    <string name="add_recipe_string">Add Recipe</string>
    <string name="add_ingredient_stringy">Add Ingredient</string>
</resources>
