<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/AddExcer"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="02dp"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/add_exercise_string"
        android:textSize="40dp"

        />

    <ImageView
        android:id="@+id/placeholderimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddExcer"
        android:padding="20dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"></ImageView>

    <EditText
        android:id="@+id/ytlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeholderimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/youtube_id"

        />

    <Spinner
        android:layout_marginTop="5dp"
        android:id="@+id/exer_spinner"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ytlink"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/addnewex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exer_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/add" />
    <!--        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"-->
    <!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>-->


</RelativeLayout>